--- a/FsDnsProxy/settings.yaml
+++ b/FsDnsProxy/settings.yaml
@@ -3,7 +3,8 @@ polling_interval: 5
 port: 10053
 dns:
   remote:
-    address: 1.1.1.1
+    address: 100.104.227.11
+    port: 10053
     domains:
       - docker.io
       - docker.com
@@ -25,6 +26,3 @@ dns:
     address: 100.100.100.100
     domains:
       - ts.net
-
-  local:
-    address: 223.5.5.5
