--- a/FsDnsProxy/FsDnsProxy.fsproj
+++ b/FsDnsProxy/FsDnsProxy.fsproj
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <OtherFlags>--warnon:1182</OtherFlags>
     <WarningLevel>5</WarningLevel>
   </PropertyGroup>
@@ -12,5 +12,10 @@
   <ItemGroup>
     <ProjectReference Include="..\YamlParser\YamlParser.csproj" />
   </ItemGroup>
-  <Import Project="..\.paket\Paket.Restore.targets" />
+  <ItemGroup>
+    <PackageReference Include="ARSoft.Tools.Net" Version="3.6.1" />
+    <PackageReference Include="FSharp.Control.AsyncSeq" Version="3.2.1" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
+  </ItemGroup>
 </Project>
