--- a/FsDnsProxy/settings.yaml
+++ b/FsDnsProxy/settings.yaml
@@ -3,10 +3,10 @@ polling_interval: 5
 port: 10053
 dns:
   remote:
-    address: 100.104.227.11
-    port: 10053
+    address:
+      - 100.104.227.11
     domains:
-      - docker.io
+      # - docker.io
       - docker.com
 
       - dropbox.com
@@ -16,13 +16,20 @@ dns:
       - gstatic.com
       - googleusercontent.com
       - googletagmanager.com
-      
+
       - githubusercontent.com
 
       - doubleclick.net
       - mcr.microsoft.com
 
   tailscale:
-    address: 100.100.100.100
+    address:
+      - 100.100.100.100
     domains:
       - ts.net
+
+  local:
+    address:
+      - 223.5.5.5
+    address6:
+      - 2400:3200::1
