--- a/YamlParser/YamlParser.csproj
+++ b/YamlParser/YamlParser.csproj
@@ -1,13 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <Content Remove="/Users/wizr/.nuget/packages/arsoft.tools.net/3.6.1/contentFiles/any/net6.0/LICENSE" />
-    <Content Remove="/Users/wizr/.nuget/packages/arsoft.tools.net/3.6.1/contentFiles/any/net6.0/NOTICE" />
+    <PackageReference Include="ARSoft.Tools.Net" Version="3.6.1" />
+    <PackageReference Include="YamlDotNet" Version="16.3.0" />
+    <PackageReference Include="Vecc.YamlDotNet.Analyzers.StaticGenerator" Version="16.3.0" />
   </ItemGroup>
-  <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
